RESOLVED FIXED11411
REGRESSION (r17280): Repro crash when clicking a link with target="_blank"
https://bugs.webkit.org/show_bug.cgi?id=11411
Summary REGRESSION (r17280): Repro crash when clicking a link with target="_blank"
mitz
Reported 2006-10-25 02:16:12 PDT
Safari crashes when you click a link with target="_blank" in a document with an http: URL. The crash is in -[WebCoreFrameBridge canTargetLoadInFrame:] due to this change in r17280: - WebCoreFrameBridge *parentBridge = [targetFrame parent]; + WebCoreFrameBridge *parentBridge = Mac([targetFrame _frame]->tree()->parent())->bridge();
Attachments
Fix (1.33 KB, patch)
2006-10-25 04:24 PDT, David Smith
no flags
Updated based on comments (1.29 KB, patch)
2006-10-25 04:40 PDT, David Smith
no flags
Once more into the breach... (1.29 KB, patch)
2006-10-25 04:46 PDT, David Smith
mitz: review+
David Smith
Comment 1 2006-10-25 04:24:45 PDT
David Smith
Comment 2 2006-10-25 04:40:20 PDT
Created attachment 11204 [details] Updated based on comments
David Smith
Comment 3 2006-10-25 04:46:52 PDT
Created attachment 11205 [details] Once more into the breach... Silly *s, always being in the wrong place.
mitz
Comment 4 2006-10-25 04:49:08 PDT
Comment on attachment 11205 [details] Once more into the breach... r=me
Mark Rowe (bdash)
Comment 5 2006-10-25 05:19:10 PDT
Landed in r17288.
Note You need to log in before you can comment on or make changes to this bug.