2006-10-25  David Smith  <catfish.man@gmail.com>

Reviewed by Mitz.

        Fixed REGRESSION (r17280): Repro crash when clicking a link with target="_blank"
        http://bugs.webkit.org/show_bug.cgi?id=11411

        * bridge/mac/WebCoreFrameBridge.mm:
        (-[WebCoreFrameBridge canTargetLoadInFrame:]): Check that the target has a frame before using it.


Canonical link: https://commits.webkit.org/14554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17288 268f45cc-cd09-0410-ab3c-d52691b4dbfc